Atualizado Apêndice C: Ficha de catalogação

--- a/Monografia/Monografia_MDJVI_Dennis.tex
+++ b/Monografia/Monografia_MDJVI_Dennis.tex
@@ -40,7 +40,7 @@
 % ---------------------------------------------------------------
 % ---------------------------------------------------------------
 %
-% Adapatado para o Departamento de Eng. de Sistemas e Computação pelo
+% Adaptado para o Departamento de Eng. de Sistemas e Computação pelo
 % professor João Araujo
 \documentclass[a4paper,12pt,oneside,onecolumn,final,fleqn]{repUERJ}
 % ---
@@ -358,7 +358,7 @@ O Museu Dom João VI da EBA/UFRJ foi criado em 1979 com a finalidade de se prese
 
 Com a finalidade de auxiliar a atividade de pesquisa e desenvolvimento do Museu, em 1999 foi desenvolvido o projeto que realizou um novo inventário dos dois acervos presentes nele, um de obras de artes, o Acervo Museológico, e o outro de documentos, o Acervo Arquivístico. Todas as peças sem registro contidas no Museu foram catalogadas, mantendo o padrão do Livro de Tombo original, criando um sistema informatizado usando o Microsoft Access onde se poderia atualizar informações sobre o acervo, adicionar ou remover novas peças e realizar consultas através de um site.
 
-O projeto original previa que toda edição no acervo deveria ser realizada utilizando um único computador "Mãe" e o arquivo do banco de dados atualizado transferido para o diretório no servidor de forma manual através de um CD. Além dessa forma de manutenção de dados não ser prática, após alguns anos ocorreu um problema no computador "Mãe" impossibilitando qualquer forma da equipe responsável fazer qualquer alteração necessária. Ainda mais recentemente, devido a falta de suporte da equipe de informática da faculdade e fragilidades existentes em utilizar um sistema obsoleto, o site com a pesquisa do acervo teve que ser removido.
+O projeto original previa que toda edição no acervo deveria ser realizada utilizando um único computador ``Mãe'' e o arquivo do banco de dados atualizado transferido para o diretório no servidor de forma manual através de um CD. Além dessa forma de manutenção de dados não ser prática, após alguns anos ocorreu um problema no computador ``Mãe'' impossibilitando qualquer forma da equipe responsável fazer qualquer alteração necessária. Ainda mais recentemente, devido a falta de suporte da equipe de informática da faculdade e fragilidades existentes em utilizar um sistema obsoleto, o site com a pesquisa do acervo teve que ser removido.
 
 \vspace{10pt}
 $\!$\\
@@ -367,7 +367,7 @@ $\!$\\
 
 Este projeto tem por objetivo possibilitar que a equipe do Museu Dom João VI tenha uma forma prática de adicionar, remover e atualizar qualquer peça do acervo, sem as limitações anteriores da transferência manual do arquivo que só poderia ser editado em um único computador.
 
-Esse banco de dados deverá ser exibido em um novo site, contendo um sistema de pesquisa de fácil utilização onde através de um ou mais parâmetros definidos pelo usuário ele possa obter uma resposta rápida sobre as peças desejadas.
+Esse banco de dados deverá ser exibido em um novo site, contendo um sistema de pesquisa de fácil utilização no qual por meio de um ou mais parâmetros definidos pelo usuário ele possa obter uma resposta rápida sobre as peças desejadas.
 
 \vspace{10pt}
 $\!$\\
